# imgstore

./: Cargo.toml  LICENSE  README.md  tauri.conf.json
src/: img.rs  main.rs  ui.rs  work.rs
src-front/: README.md  package.json  pnpm-lock.yaml
src-front/src/: App.vue
src-front/src/assets/: main.css
src-front/src/components/: ActionSelector.vue  Done.vue  ImageElem.vue  Loading.vue  MainBody.vue  MainImage.vue
