[package]
name = "imgstore"
version = "0.0.11"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
colored = "2.0"
image = "0.24"
serde_json = "1.0.92"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
image_hasher = "1.1.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
